# simple_pytorch_transformer

./: .gitignore  Makefile  README.md  pyproject.toml
transformer/: __init__.py  loss.py  modules.py  utils.py
translation/: __main__.py  dataloading.py  inference.py  training.py  vocabulary.py
